<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PasswordChangeActivity"
    android:gravity="center"
    android:background="@color/dark_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="40dp"
        android:paddingHorizontal="20dp"
        android:background="@color/white"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CAMBIO DE CONTRASEÑA"
                android:textSize="28sp"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/robotoblack"
                android:layout_marginVertical="10dp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Es una buena idea usar una contraseña que no usas en ningún otro sitio"
                android:textSize="18sp"
                android:textColor="@color/dark_blue2"
                android:fontFamily="@font/robotolight"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:fontFamily="@font/robotomedium"
                android:text="Contraseña antigua"
                android:textAllCaps="true"
                android:textColor="@color/dark_blue"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txvOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/robotolight"
                    android:inputType="textPassword"
                    android:hint="Ingrese su contraseña antigua"
                    android:gravity="center"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_show_old_password_change_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_visibility_24"/>

                    <ImageView
                        android:id="@+id/img_hide_old_password_change_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_visibility_off_24"
                        android:visibility="gone"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:fontFamily="@font/robotomedium"
                android:text="Contraseña nueva"
                android:textAllCaps="true"
                android:textColor="@color/dark_blue"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txvNewPassword1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/robotolight"
                    android:inputType="textPassword"
                    android:hint="Ingrese su contraseña nueva"
                    android:gravity="center"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_show_new1_password_change_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_visibility_24"/>

                    <ImageView
                        android:id="@+id/img_hide_new1_password_change_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_visibility_off_24"
                        android:visibility="gone"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:fontFamily="@font/robotomedium"
                android:text="Contraseña nueva"
                android:textAllCaps="true"
                android:textColor="@color/dark_blue"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txvNewPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/robotolight"
                    android:inputType="textPassword"
                    android:hint="Ingrese su contraseña nueva"
                    android:gravity="center"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_show_new2_password_change_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_visibility_24"/>

                    <ImageView
                        android:id="@+id/img_hide_new2_password_change_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_visibility_off_24"
                        android:visibility="gone"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btnChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:fontFamily="@font/robotomedium"
                android:text="CAMBIAR CONTRASEÑA"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txtCancelar_pc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancelar"
                android:textSize="18sp"
                android:textColor="@color/shadow_red"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>